--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
         Supports cross-domain, chunked and resumable file uploads and client-side image resizing.<br>
         Works with any server-side platform (PHP, Python, Ruby on Rails, Java, Node.js, Go etc.) that supports standard HTML form file uploads.</p>
     </blockquote>
+	<blockquote>
+		<p> rsync csb7x2035:/home1/irteam/work/downloaded_data/* </p>
+	</blockquote>
     <br>
     <!-- The file upload form used as target for the file upload widget -->
     <form id="fileupload" action="//jquery-file-upload.appspot.com/" method="POST" enctype="multipart/form-data">
@@ -60,8 +63,10 @@
         </div>
         <div class="panel-body">
             <ul>
-                <li>The maximum file size for uploads in this demo is <strong>50 MB</strong> (default file size is unlimited).</li>
+                <li>The maximum file size for uploads in this demo is <strong>100 G</strong> (default file size is unlimited).</li>
+				<!--
                 <li>Only image files (<strong>TXT, JPG, GIF, PNG, BMP, RAR, ZIP, 7ZIP, DOC, DOCX</strong>) are allowed in this website.</li>
+-->
                 
                 <li>You can <strong>drag &amp; drop</strong> files from your desktop on this webpage (see <a href="https://github.com/blueimp/jQuery-File-Upload/wiki/Browser-support">Browser support</a>).</li>
                 <li>Please refer to the <a href="https://github.com/blueimp/jQuery-File-Upload">project website</a> and <a href="https://github.com/blueimp/jQuery-File-Upload/wiki">documentation</a> for more information.</li>
